--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,7 +18,7 @@
     margin: 0px;
     padding: 0px;
     color: white;
-    font-size: 1.5vh;
+    font-size: 1.25vh;
 }
 
 body {
@@ -99,11 +99,15 @@ h2 {
     font-size: 4vh;  
 }
 button {
-    width: 80vw;
+    width: 40vw;
     height: 5vh;
     border: none;
     background-color: transparent;
-    border: 1px var(--color-box2) solid;
+}
+.resume {
+    border: 2.5px solid transparent;
+    border-image: linear-gradient(90deg, var(--button-color-1), var(--button-color-2)) 1;
+    border-image-slice: 1;
 }
 main {
     overflow-y: scroll;
@@ -120,10 +124,10 @@ main {
 }
 .blank, .project, .contact {
     padding-top: 15vh;
-    scroll-snap-stop: always;
-    scroll-snap-align: center;
+    /* scroll-snap-stop: always;
+    scroll-snap-align: center; */
     width: 100vw;
-    height: 85vh;
+    height: 75vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -133,11 +137,11 @@ main {
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    height: 75vh;
+    gap: 5vh;
+    height: 85vh;
     width: 85vw;
-    background-color: var(--color-box);
 }
 .box {
     display: flex;
@@ -159,12 +163,13 @@ main {
 .title, .content {
     display: flex;
     flex-direction: column;
-    align-items: center;    
-    border-radius: 10px;
+    align-items: center;  
+    justify-content: center; 
 }
+
 .title {
     justify-content: center;
-    gap: 1vh;
+    gap: 3vh;
 }
 .flip-box {
     height: 50vh;
@@ -175,20 +180,12 @@ main {
     gap: 5vh;
 }
 #person {
-    width: 18vh;
-    height: 18vh;
+    width: 12vh;
+    height: 12vh;
 }
-.border-right {
-    width: 25vw;
-    border-top: 1vh solid transparent;
-    border-image: linear-gradient(90deg, var(--button-color-1), var(--button-color-2)) 1;
-    border-image-slice: 1;
-    align-self: start;
-    margin-left: 10vw;
-    margin-top: -1vh;
-}
+
 #story {
-    width: 60vw;
+    width: 65vw;
     font-size: 1.5vh;
     padding: 2vh;
     line-height: 1.7;
@@ -230,12 +227,14 @@ main {
 }
 
 .content {
-    justify-content: space-evenly;
     height: 50vh;
-    width: 65vw;
+    width: 70vw;
     overflow-y: hidden;
+    gap: 1vh;
 }
-
+#project1 > .container > .box > .content {
+    gap: 4vh;
+}
 .img {
     height: 58vh;
     width: 32vh;
@@ -262,21 +261,22 @@ main {
     justify-self: end;
     animation: vibration 0.5s infinite;
     margin-left: -8.5vw;
-    margin-top: 11vh;
+    margin-top: 20vh;
     font-size: 3vh;
 }
 .collapse {
     margin-left: 2vw;
-    margin-right: -9.5vw;
+    margin-right: -8.5vw;
 }
 .title > span {
     font-size: 1.5vh;
+    text-align: center;
 }
 h4 {
     font-size: 2vh;
 }
 .detail {
-    width: inherit;
+    width: 55vw;
     height: 4vh;
     padding: 1vh;
     background-color: var(--color-box2);
@@ -436,7 +436,7 @@ textarea {
         display: block;
     }
     button {
-        width: 40vh;
+        width: 60vh;
     }
     .container {
         width: 80vw;
@@ -463,9 +463,9 @@ textarea {
     #project2 > .container > .box {
         flex-direction: row-reverse;
     }
-    .contact > .container {
-        flex-direction: row;
-        justify-content: space-between;
+    .contact > .container {   
+        justify-content: center;
+
     }
     .contact > .container > .content {
         flex-direction: row;
@@ -500,11 +500,8 @@ textarea {
         height: 25vh;
     }
     #story {
-        width: 40vw;
-        font-size: 2.3vh;
-        border-top: none;
-        border-left: 3px solid transparent;
-        border-image: linear-gradient(175deg, var(--button-color-1), var(--button-color-2)) 1;
+        width: 50vw;
+        font-size: 2vh;
     }
     .skills {
         width: 40vw;
@@ -514,15 +511,15 @@ textarea {
     }
     .set {
         flex-direction: column;
-        gap: 4vh;
+        gap: 2vh;
     }
     .skill-set {
         width: 12vh;
-        height: 12vh;
+        height: 10vh;
     }
     .skill-icon {
-        width: 8vh;
-        height: 8vh;
+        width: 7vh;
+        height: 7vh;
     }
 
 }
