--- a/css/resume.css
+++ b/css/resume.css
@@ -44,12 +44,14 @@ body {
     align-items: center;
     justify-content: space-between;
     width: var(--width);
+    max-width: 900px;
 }
 .bold {
     font-weight: bold;
 }
 .description {
-    width: var(--width)
+    width: var(--width);
+    max-width: 900px;
 }
 .project {
     align-self: start;
@@ -75,6 +77,7 @@ ul[class='hor-box'] {
     gap: 15px;
     
     width: calc(0.9 * var(--width));
+    max-width: calc(0.9 * 900);
 }
 li {
     font-size: calc(var(--standard-size) * 0.65);
@@ -93,6 +96,7 @@ span {
 
 #position {
     width: var(--width);
+    max-width: 900px;
     text-align: end;
     font-style: italic;
 }
