--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,525 +1,106 @@
 :root {
-    --color-primary-background-lunar: rgb(19,11,34);
-    --color-second-background-lunar: rgb(18,7,24);
-    --color-box: rgba(16, 13, 31, 0.311);
-    --color-box2: rgba(78, 76, 85, 0.311);
-    --main-heading-size: 6vh;
-    --small-main-heading-size: 3vh;
-    --diameter-moon: 6vh;
-    --diameter-earth: calc((var(--diameter-moon) * 1.5));
-    --button-color-1:  rgb(220,79,248);
-    --button-color-2: rgb(70,195,249);
-    --time-options-color: rgba(64, 94, 140, 0.7);
-    --time-options-color2: rgba(33, 42, 54, 0.7);
+    --width: 88vw;
+    --standard-size: 1.7vh;
+    --margin-top-bottom: 3px;
+}
+@media only screen and ((min-width: 768px) and (max-width: 1222px)) {
+    :root {
+        --width: 70vw;
+    }
 }
 
-*{
+@media only screen and ((min-width: 1223px)) {
+    :root {
+        --width: 40vw;
+    }
+}
+* {
     box-sizing: content-box;
-    margin: 0px;
-    padding: 0px;
-    color: white;
-    font-size: 1.25vh;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font-size: calc(var(--standard-size) * 0.75);
+    margin-top: 0.5px;
+    margin-bottom: 0.5px;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-}
-
-.background {
-    position: fixed;
-    top: 0px;
-    pointer-events: none;
-    z-index: 1;
-}
-
-.lunar {
-    width:100vw;
-    height: 15vh;
-    background-color: var(--color-second-background-lunar);
-    box-shadow: 0px 2vh 2vh 2vh var(--color-second-background-lunar) ;
-    position: relative;
-}
-.moon {
-    width: var(--diameter-moon);
-    height: var(--diameter-moon);
-    border-radius: 50%;
-    background-image: url('../image/moon.png');
-    background-size:cover;
-    background-position: center;
-    position: absolute;
-    bottom: 0vh;
-    left: 1vw;
-}
-.earth {
-    width: var(--diameter-earth);
-    height: var(--diameter-earth);
-    border-radius: 50%;
-    background-color: var(--color-second-background-lunar);
-    position: absolute;
-    box-shadow: -1px -1px 15px 15px var(--color-second-background-lunar) ;
-    bottom: 0;
-    left: 18.5px;
-}
-
-.myself {
-    position: absolute;
-    top: 30vh;
-    margin-left: auto;
-    text-align: center;
-    width: 99vw;
-    height: 40vh;
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
-}
-.name {
-    animation: bigger 2s ease-in-out;
-} 
-
-.introduction {
-    animation: appear 2s forwards;
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    gap: 4vh;
-    height: max-content;
-    width: 85vw;
-    padding-top: 2vh;
-}
-h1 {   
-    font-size: 4vh;  
-}
-h2 {
-    font-size: 4vh;  
-}
-button {
-    width: 40vw;
-    height: 5vh;
-    border: none;
-    background-color: transparent;
-}
-.resume {
-    border: 2.5px solid transparent;
-    border-image: linear-gradient(90deg, var(--button-color-1), var(--button-color-2)) 1;
-    border-image-slice: 1;
-}
-main {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--color-second-background-lunar);
-    background-image: url('../image/galaxy.jpg');
-    background-size:cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-.blank, .project, .contact {
-    padding-top: 15vh;
-    /* scroll-snap-stop: always;
-    scroll-snap-align: center; */
-    width: 100vw;
-    height: 75vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 1vh;
 }
 
+/* common class */
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 5vh;
-    height: 85vh;
-    width: 85vw;
+    justify-content: center;
+    margin-top: 1.5vh;
 }
-.box {
+.hor-box {
     display: flex;
     align-items: center;
-    gap: 5vw;
+    justify-content: space-between;
+    width: var(--width);
+    max-width: 900px;
 }
-#sub-title {
-    font-size: 4.5vh;
-    padding-top: 1vh;
+.bold {
+    font-weight: bold;
 }
-.box > button {
-    width: 30vw;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 1px var(--color-box2) solid;
-    font-size: 2vh;
+.description {
+    width: var(--width);
+    max-width: 900px;
+}
+.project {
+    align-self: start;
 }
 
-.title, .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;  
-    justify-content: center; 
-}
-
-.title {
-    justify-content: center;
-    gap: 3vh;
-}
-.flip-box {
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5vh;
-}
-#person {
-    width: 12vh;
-    height: 12vh;
-}
-
-#story {
-    width: 65vw;
-    font-size: 1.5vh;
-    padding: 2vh;
-    line-height: 1.7;
-    text-align: justify;
-}
-.skills {
-    width: 85vw;
-    height: 45vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5vw;
-}
-.set {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2vw;
-}
-.skill-set {
-    width: 18vw;
-    height: 7vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5vh;
-    border: 2px solid transparent;
-    border-radius: 10px;
-    border-image: linear-gradient(90deg, var(--button-color-1), var(--button-color-2)) 1;
-    border-image-slice: 1; 
-}
-.skill-icon {
-    width: 5vh;
-    height: 5vh;
-    background-size: cover;
-    background-position: center;
-}
-
-.content {
-    height: 50vh;
-    width: 70vw;
-    overflow-y: hidden;
-    gap: 1vh;
-}
-#project1 > .container > .box > .content {
-    gap: 4vh;
-}
-.img {
-    height: 58vh;
-    width: 32vh;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-}
-#img-pj1 {
-    background-image: url("../image/sudoku.png");
-}
-
-#img-pj2 {
-    background-image: url("../image/tradeX/1.png");
-    transition: background-image 0.5s ease-in-out, transform 0.5s ease-in-out;
-    transform: translateX(0); 
-}
-.slide-in {
-    animation: collapse-left 0.3 linear; /* Slide in from the left */
-}
-.expand, .collapse {
-    /* border: 1px red solid; */
-    padding: 5px;
-    background-color: var(--color-box2);
-    justify-self: end;
-    animation: vibration 0.5s infinite;
-    margin-left: -8.5vw;
-    margin-top: 20vh;
-    font-size: 3vh;
-}
-.collapse {
-    margin-left: 2vw;
-    margin-right: -8.5vw;
-}
-.title > span {
-    font-size: 1.5vh;
-    text-align: center;
-}
-h4 {
-    font-size: 2vh;
-}
-.detail {
-    width: 55vw;
-    height: 4vh;
-    padding: 1vh;
-    background-color: var(--color-box2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
+/*  */
+h1 {
+    font-size: var(--standard-size);
+    width: 90vw;
     text-align: center;
     
 }
-.detail > div { 
-    /* transform: rotateX(180deg); */
-    font-size: 1.5vh;
+h2 {
+    font-size: calc(var(--standard-size) * 0.8);
 }
 
-#project2 > .container > .box > .content {
-   flex-direction: row;
-   flex-wrap: wrap;
-}
-#project2 > .container > .box > .content > .detail {
-    width: max-content;
-}
-.contact > .container {
-    justify-content: center;
-    gap: 2vh
-}
-
-.form {
-    height: 40vh;
+ul[class='hor-box'] {
+    align-self: center;
     display: flex;
-    flex-direction: column;
+    justify-content:center;
     align-items: center;
-    justify-content: center;
+    gap: 15px;
+    width: calc(0.9 * var(--width));
+    max-width: calc(0.9 * 900);
+    list-style-position: inside;
+    margin: 0;
+    padding: 0;
+    
 }
-input, textarea {
-   width: 55vw;
-   border: none;
-   background-color: var(--color-box2);
-   border-radius: 10px;
-   padding: 10px;
-   margin-top: 1vh;
-   margin-left: 2vw;
+li {
+    font-size: calc(var(--standard-size) * 0.65);
 }
-input:focus, textarea:focus {
-    outline-style: none;
+li:first-child {
+    list-style: none;
 }
-input[type='email'] {
-    height: 5vh;
-}
-textarea {
-    height: 20vh;
+section {
+    margin-bottom: var(--margin-top-bottom);
+    margin-top: calc(1.5 * var(--margin-top-bottom));
 }
 
-.social-link {
-    display: flex;
-    justify-content: center;
-    gap: 2vh;
-    width: 50vw;
-    border-top: 3px solid transparent;
-    border-image: linear-gradient(90deg, var(--button-color-1), var(--button-color-2)) 1;
-    border-image-slice: 1;
-    padding: 3vh;
-    margin-top: 2vh;
-}
-.social {
-    height: 7vh;
-    width: 7vh;
-    background-position: center;
-    background-size: cover;
-    border-radius: 0;
+span {
+    font-weight: normal;
 }
 
-.linkedin {
-    background-image: url("../image/social/linkedin.png");
-}
-.github {
-    background-image: url("../image/social/github.png");
-}
-.email {
-    background-image: url('../image/social/email.png');
-}
-.visible {
-    visibility: visible;
-}
-.hidden {
-    visibility: hidden;
-    display: none;
-}
-/* For WebKit-based browsers like Chrome and Safari */
-
-::-wegithbkit-scrollbar, ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track, ::-webkit-scrollbar-thumb:hover {
-    background: none; /* Thumb color (the draggable part) */
-    border: none; /* Rounded corners for the thumb */
+#position {
+    width: var(--width);
+    max-width: 900px;
+    text-align: end;
+    font-style: italic;
 }
 
-@keyframes fade-out {
-    0% { opacity: 1; } 
-    100% { opacity: 0; } 
-}
-@keyframes appear {
-    0% { opacity: 0; } 
-    100% { opacity: 1; } 
-}
-@keyframes smaller {
-    0% { font-size: var(--main-heading-size); }
-    100% { font-size: var(--small-main-heading-size);}
-}
-@keyframes bigger {
-    0% { font-size: var(--small-main-heading-size); }
-    100% { font-size: var(--main-heading-size);}
-}
-@keyframes flip-forward {
-    0% { transform: rotateX(0deg); }
-    100% { transform: rotateX(180deg); }
-}
-@keyframes flip-backward {
-    0% { transform: rotateX(180deg); }
-    100% { transform: rotateX(0deg); }
-}
-@keyframes vibration {
-    0% {
-        transform: translateX(0);
-    }
-    10% {
-        transform: translateX(1px);
-    }
-    20% {
-        transform: translateX(-1px);
-    }
-    5% {
-        transform: translateX(0px);
-    }
-    100% {
-        transform: translateX(0px);
-    }
-}
-@keyframes expand-left {
-    from {
-      width: 0vw;
-    }
-    to {
-      width: 50vw;
-    }
-}
-@keyframes collapse-left {
-    from {
-      width: 50vw;
-    }
-    to {
-      width: 0vw;
-    }
-}
-
-@media only screen and (min-width: 788px) {
-    .hidden {
-        visibility: visible;
-        display: block;
-    }
-    button {
-        width: 60vh;
-    }
-    .container {
-        width: 80vw;
-    }
-    .expand, .collapse {
-        visibility: hidden;
-        display: none;
-    }
-    .content {
-        width: 40vw;
-        height: 45vh;
-        display: flex;
-        align-items: center;
-        flex-grow: 2;
-        overflow-y:visible;
-    }
-    .detail {
-        width: 40vw;
-    }
-    .content > div > .hidden {
-        visibility: hidden;
-        display: none;
-    }
-    #project2 > .container > .box {
-        flex-direction: row-reverse;
-    }
-    .contact > .container {   
-        justify-content: center;
-
-    }
-    .contact > .container > .content {
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-    .form {
-        height: 55vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        margin-right: 5vw;
-    }
-    input, textarea {
-        width: 40vw;
-    }
-    textarea {
-        height: 30vh;
-    }
-    .social-link {
-        align-items: center;
-        height: 50vh;
-        border-top: none;
-        border-left: 3px solid transparent;
-        border-image: linear-gradient(175deg, var(--button-color-1), var(--button-color-2)) 1;
-    }
-    .flip-box {
-        flex-direction: row;
-    }
-    #person {
-        width: 25vh;
-        height: 25vh;
-    }
-    #story {
-        width: 50vw;
-        font-size: 2vh;
-    }
-    .skills {
-        width: 40vw;
-        height: 55vh;
-        flex-direction: row;
-        gap: 4vh;
-    }
-    .set {
-        flex-direction: column;
-        gap: 2vh;
-    }
-    .skill-set {
-        width: 12vh;
-        height: 10vh;
-    }
-    .skill-icon {
-        width: 7vh;
-        height: 7vh;
-    }
-
-}
