--- a/css/resume.css
+++ b/css/resume.css
@@ -1,17 +1,17 @@
 :root {
-    --width: 88vw;
+    --width: 98vw;
     --standard-size: 1.7vh;
     --margin-top-bottom: 3px;
 }
 @media only screen and ((min-width: 768px) and (max-width: 1222px)) {
     :root {
-        --width: 70vw;
+        --width: 85vw;
     }
 }
 
 @media only screen and ((min-width: 1223px)) {
     :root {
-        --width: 40vw;
+        --width: 70vw;
     }
 }
 * {
@@ -29,7 +29,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 2vh;
+    margin-top: 1vh;
 }
 
 /* common class */
@@ -38,6 +38,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 1vh;
+    width: var(--width);
 }
 .hor-box {
     display: flex;
@@ -57,13 +59,22 @@ body {
     align-self: start;
 }
 
+a {
+    text-decoration: none;
+    color: #838587;
+    transition: color 0.3s ease; 
+}
+ 
+a:hover {
+    color: #4f4d4d;
+}
+
 /*  */
 h1 {
     font-size: var(--standard-size);
     width: 90vw;
     text-align: center;
-    margin-bottom: calc(var(--margin-top-bottom) / 3);
-    margin-top: var(--margin-top-bottom);
+    
 }
 h2 {
     font-size: calc(var(--standard-size) * 0.8);
@@ -75,9 +86,12 @@ ul[class='hor-box'] {
     justify-content:center;
     align-items: center;
     gap: 15px;
-    
     width: calc(0.9 * var(--width));
     max-width: calc(0.9 * 900);
+    list-style-position: inside;
+    margin: 0;
+    padding: 0;
+    
 }
 li {
     font-size: calc(var(--standard-size) * 0.65);
@@ -100,4 +114,3 @@ span {
     text-align: end;
     font-style: italic;
 }
-
