style for about me

--- a/mochy.me/src/css/portfolio.css
+++ b/mochy.me/src/css/portfolio.css
@@ -180,4 +180,16 @@ svg path {
     padding: 2vw;
 }
 
+#aboutme > h1 {
+
+}
+
+#bio {
+    font-size: 2vh;
+}
+
+#asp {
+    font-size: 2vh;
+}
+
 
